--- a/view.html
+++ b/view.html
@@ -126,8 +126,8 @@
  </span>
  </div>
  <div class="doc-verification-fields margin-top-10">
- 
- <span class=doc-verification-value><span class="icon-pdf no-margin"><img src='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="128" height="128"><rect fill-opacity="0"/></svg>' style="background-blend-mode:normal!important;background-clip:content-box!important;background-position:50% 50%!important;background-color:rgba(0,0,0,0)!important;background-image:var(--sf-img-3)!important;background-size:100% 100%!important;background-origin:content-box!important;background-repeat:no-repeat!important"></span><a target=_blank href=https://fs-im-kefu.7moor-fs1.com/ly/4d2c3f00-7d4c-11e5-af15-41bf63ae4ea0/1743000282869/CSR%2012.pdf>Click here to download the Certificate</a></span>
+ <span class="doc-verification-value"><span class="icon-pdf no-margin"><img src="/Content/Images/Icons/pdf-doc.png" /></span><a target=_blank href='/Certificate/VerificationCopy?fileName=Continuous Synopsis Record_2024_06_28_09_42_30_077_4306355.pdf&amp;status=WYS%2fondUqkwzyhaxplFmGw%3d%3d'>Click here to download the Certificate</a></span>
+
  </div>
  </div>
  </div>
