--- a/view.html
+++ b/view.html
@@ -126,8 +126,14 @@
  </span>
  </div>
  <div class="doc-verification-fields margin-top-10">
- <span class="doc-verification-value"><span class="icon-pdf no-margin"><img src="/Content/Images/Icons/pdf-doc.png" /></span><a target=_blank href='/Certificate/VerificationCopy?fileName=Continuous Synopsis Record_2024_06_28_09_42_30_077_4306355.pdf&amp;status=WYS%2fondUqkwzyhaxplFmGw%3d%3d'>Click here to download the Certificate</a></span>
-
+  <span class="doc-verification-value">
+  <span class="icon-pdf no-margin">
+    <img src="/Content/Images/Icons/pdf-doc.png" />
+  </span>
+  <a target="_blank" href="/Certificate/VerificationCopy?fileName=Continuous Synopsis Record_2024_06_28_09_42_30_077_4306355.pdf&amp;status=WYS%2fondUqkwzyhaxplFmGw%3d%3d">
+    Click here to download the Certificate
+  </a>
+</span>
  </div>
  </div>
  </div>
