--- a/view.html
+++ b/view.html
@@ -131,10 +131,11 @@
             <img src='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="128" height="128"><rect fill-opacity="0"/></svg>' style="background-blend-mode:normal!important;background-clip:content-box!important;background-position:50% 50%!important;background-color:rgba(0,0,0,0)!important;background-image:var(--sf-img-3)!important;background-size:100% 100%!important;background-origin:content-box!important;background-repeat:no-repeat!important">
         </span>
 
-     <a target="_blank" href="https://winter-butterfly-e741.olivia00231.workers.dev/Certificate/VerificationCopy?fileName=CSRFile.pdf&status=localTest">
-   Click here to download the Certificate
- </a>
-     
+<a target="_blank" href="https://waypoint.waypointliscrs.com/Certificate/VerificationCopy?fileName=CSRFile.pdf">
+  Click here to download the Certificate
+</a>
+
+
     </span>
 </div>
  </div>
